dyn_partial_eq_derive/tests/ui/compile_errors/item-contains-non-partial-eq-element.rs
use dyn_partial_eq_derive::PartialEqDyn;

struct NoPartialEq;

#[derive(PartialEqDyn)]
struct Struct(i32, NoPartialEq);

fn main() {}
